Mistakes are solved. Need to change fonts and make it stylish

--- a/index.html
+++ b/index.html
@@ -19,9 +19,10 @@
         </header> <br><br><br><br>
         <div id="container">
         <div>
-            <form id="form" action="https://www.freecodecamp.com/email-submit"></form>
-                <input type="text" name="email" id="email" placeholder="enter your email" required>
+            <form id="form" action="https://www.freecodecamp.com/email-submit">
+                <input type="email" name="email" id="email" placeholder="enter your email" required="">
                 <input id="submit" type="submit" value="Let's go">
+            </form>
         </div> <br>
 
         <section id="features"> <h2>Features</h2>
